@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*vislcg3-0.9.9.11024 (09 Nov 2015)
+
+  09 Nov 2015; Flammie Pirinen <flammie@gentoo.org> +vislcg3-0.9.9.11024.ebuild:
+  sci-misc/vislcg3: version bump  gets cg-relabel
+
 *vislcg3-0.9.9.10822 (30 Jun 2015)
 
   30 Jun 2015; Flammie Pirinen <flammie@gentoo.org> +vislcg3-0.9.9.10822.ebuild:
